bad/assign_uop_bneg_string.example_compiler_output
ERROR
[1mbad/assign_uop_bneg_string.lat:4:9: [1;31merror: [0;1mleft side is not assignable[m
	!false = "";
	       [1;32m^[m
[1mbad/assign_uop_bneg_string.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	!false = "";
	[1;32m^[m
